# deep_research_tutorial

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agent/: agent.py  callbacks.py  llm_config.py
agent/database_agent/: agent.py  prompt.py
agent/deep_research_agent/: agent.py
agent/deep_research_agent/dynamic_parall_agent/: agent.py
agent/deep_research_agent/paper_agent/: agent.py  prompt.py
agent/deep_research_agent/report_agent/: agent.py  prompt.py
agent/tools/: __init__.py  database.py  io.py  test_database.py
database_server/: service.py
